# ArosBackend

./: CMakeLists.txt  config
implement/: carpets.cpp  evantSwitch.cpp  finances.cpp  helperFunctions.cpp  network.cpp  orders.cpp  time.cpp  workers.cpp
implement/evants/: carpetsManipulation.cpp  complexOperationEvants.cpp  ordersEvants.cpp  workerEvants.cpp
includes/: carpets.hpp  dataBase.hpp  evantSwitch.hpp  finances.hpp  helperFunctions.hpp  orders.hpp  time.hpp  workers.hpp
includes/evants/: carpetsManipulation.hpp  deliveryEvants.hpp
